--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,12 @@ body {
 }
 
 a {
-	color: #0563bb;
+	color: #eb455f;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #067ded;
+	color: #eb455f;
 	text-decoration: none;
 }
 
@@ -32,7 +32,7 @@ h6 {
 	right: 15px;
 	bottom: 15px;
 	z-index: 996;
-	background: #0563bb;
+	background: #eb455f;
 	width: 40px;
 	height: 40px;
 	border-radius: 50px;
@@ -46,7 +46,7 @@ h6 {
 }
 
 .back-to-top:hover {
-	background: #0678e3;
+	background: #eb455f;
 	color: #fff;
 }
 
@@ -74,7 +74,7 @@ h6 {
 	position: fixed;
 	top: calc(50% - 30px);
 	left: calc(50% - 30px);
-	border: 6px solid #0563bb;
+	border: 6px solid #eb455f;
 	border-top-color: #fff;
 	border-bottom-color: #fff;
 	border-radius: 50%;
@@ -210,7 +210,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover > a {
 	color: #fff;
-	background: #0563bb;
+	background: #eb455f;
 }
 
 .nav-menu a:hover span,
@@ -264,7 +264,7 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
 	color: #fff;
-	background-color: #0563bb;
+	background-color: #eb455f;
 }
 
 /*--------------------------------------------------------------
@@ -310,7 +310,7 @@ h6 {
 }
 
 #hero p span {
-	color: #0563bb;
+	color: #eb455f;
 	letter-spacing: 1px;
 }
 
@@ -328,7 +328,7 @@ h6 {
 }
 
 #hero .social-links a:hover {
-	color: #0563bb;
+	color: #eb455f;
 }
 
 @media (max-width: 992px) {
@@ -388,7 +388,7 @@ section {
 	display: block;
 	width: 40px;
 	height: 3px;
-	background: #0563bb;
+	background: #eb455f;
 	bottom: 0;
 	left: calc(50% - 20px);
 }
@@ -424,7 +424,7 @@ section {
 .about .content ul i {
 	font-size: 16px;
 	margin-right: 5px;
-	color: #0563bb;
+	color: #eb455f;
 	line-height: 0;
 }
 
@@ -450,7 +450,7 @@ section {
 	left: 50%;
 	transform: translateX(-50%);
 	font-size: 24px;
-	background: #0563bb;
+	background: #eb455f;
 	color: #fff;
 	border-radius: 50px;
 	display: inline-flex;
@@ -507,7 +507,7 @@ section {
 	width: 1px;
 	height: 10px;
 	transition: 0.9s;
-	background-color: #0563bb;
+	background-color: #eb455f;
 }
 
 /*--------------------------------------------------------------
@@ -524,7 +524,7 @@ section {
 .resume .resume-item {
 	padding: 0 0 20px 20px;
 	margin-top: -2px;
-	border-left: 2px solid #0563bb;
+	border-left: 2px solid #eb455f;
 	position: relative;
 }
 
@@ -534,7 +534,7 @@ section {
 	font-weight: 600;
 	text-transform: uppercase;
 	font-family: "Poppins", sans-serif;
-	color: #0563bb;
+	color: #eb455f;
 	margin-bottom: 10px;
 }
 
@@ -568,7 +568,7 @@ section {
 	left: -9px;
 	top: 0;
 	background: #fff;
-	border: 2px solid #0563bb;
+	border: 2px solid #eb455f;
 }
 
 /*--------------------------------------------------------------
@@ -603,7 +603,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-	color: #0563bb;
+	color: #eb455f;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -703,7 +703,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-	color: #148af9;
+	color: #eb455f;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -752,14 +752,14 @@ section {
 	height: 12px;
 	background-color: #fff;
 	opacity: 1;
-	border: 1px solid #0563bb;
+	border: 1px solid #eb455f;
 }
 
 .portfolio-details
 	.portfolio-details-slider
 	.swiper-pagination
 	.swiper-pagination-bullet-active {
-	background-color: #0563bb;
+	background-color: #eb455f;
 }
 
 .portfolio-details .portfolio-info {
@@ -1002,11 +1002,11 @@ section {
 	height: 12px;
 	background-color: #fff;
 	opacity: 1;
-	border: 1px solid #0563bb;
+	border: 1px solid #eb455f;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-	background-color: #0563bb;
+	background-color: #eb455f;
 }
 
 @media (min-width: 992px) {
@@ -1025,7 +1025,7 @@ section {
 
 .contact .info i {
 	font-size: 20px;
-	color: #0563bb;
+	color: #eb455f;
 	float: left;
 	width: 44px;
 	height: 44px;
@@ -1060,7 +1060,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-	background: #0563bb;
+	background: #eb455f;
 	color: #fff;
 }
 
@@ -1131,7 +1131,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-	background: #0563bb;
+	background: #eb455f;
 	border: 0;
 	padding: 10px 35px;
 	color: #fff;
@@ -1140,7 +1140,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-	background: #0678e3;
+	background: #ff597b;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1197,7 +1197,7 @@ section {
 #footer .social-links a {
 	font-size: 18px;
 	display: inline-block;
-	background: #0563bb;
+	background: #eb455f;
 	color: #fff;
 	line-height: 1;
 	padding: 8px 0;
@@ -1210,7 +1210,7 @@ section {
 }
 
 #footer .social-links a:hover {
-	background: #0678e3;
+	background: #ff597b;
 	color: #fff;
 	text-decoration: none;
 }
@@ -1221,4 +1221,13 @@ section {
 
 #footer .credits {
 	font-size: 13px;
+}
+
+.img-fluid {
+	border-radius: 50%;
+}
+
+.underabout {
+	padding-top: 3rem !important;
+	padding-left: 1.5rem !important;
 }
